--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+#build-tools
+build-tools
+
+#data folder
+data
+
+#docs file
+docs
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
