--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ decorator==5.1.1
 exceptiongroup==1.2.2
 executing==2.1.0
 fonttools==4.54.1
+imbalanced-learn==0.12.4
 importlib-metadata==8.5.0
 importlib-resources==6.4.5
 ipykernel==6.29.5
